--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,47 @@
 .App {
  min-height: 100vh;
- background-image: linear-gradient(45deg, #ff9a9e 0% , #fad0c4 99%, #fad0c4 100%);
+ background-image: white;
 }
-.search-form{
-  min-height: 10vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 
 .search-bar{
-  width: 50%;
-  border: none;
+      
+  border-radius: 10px;
+  height: 42px;
+  width: 270px;
   padding: 10px;
+
+}
+.input-box{
+  border-radius: 7%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-flow: wrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  border: 1px solid;
+  background: black;
+  padding: 10px;
+  box-shadow: 2px 18px 20px 20px #666666;
+}
+.input-box:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
+}
+@media screen and (max-width: 1000px) {
+  .input-box ,.search-bar {
+    width: 40%;
+  }
 }
 
+@media screen and (max-width: 620px) {
+  .input-box, .search-bar {
+    width: 100%;
+  }
+}
 .search-button{
   background: green;
   border: none;
