--- a/src/components/Recipe.card.css
+++ b/src/components/Recipe.card.css
@@ -76,3 +76,17 @@
     }
   }
   
+
+  .playercard{
+    text-align: center;
+    justify-content:center;
+    border: 1px solid black;
+    width: 400px;
+    background: black;
+    color: white;
+    box-shadow: 2px 18px 20px 20px #666666;
+  }
+  .playercard:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 40px -10px rgba(0, 0, 0, 0.25);
+  }
